--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <h1>🎮 欢迎来玩我的小游戏！</h1>
     <a href="2048.html ">2048 游戏</a >
     <a href="贪吃蛇.html">贪吃蛇游戏</a >
-    <a href="扫描.html">扫描游戏</a >
+    <a href="扫雷.html">扫描游戏</a >
 </body>
 </html>
